syntax = "proto3";

option java_multiple_files = true;
package grpc.generated;

// Status Enum
enum Status {
  SUCCESS = 0;
  FAILURE = 1;
}

// Generic Status Response
message StatusMessageResponse {
  Status status = 1;
  string message = 2;
}

// Item Object
message Item {
  string id = 1;
  string name = 2;
  double price = 3;
  int32 availableQuantity = 4;
}

// Add Item
service AddItemService {
  rpc AddItem(AddItemRequest) returns (StatusMessageResponse);
}

message AddItemRequest {
  string id = 1;
  string name = 2;
  double price = 3;
  int32 initialQuantity = 4;
  optional bool isSentByPrimary = 5;
}

// Update Item Details
service UpdateItemService {
  rpc UpdateItem(UpdateItemRequest) returns (StatusMessageResponse);
}

message UpdateItemRequest {
  string id = 1;
  double price = 2;
  optional bool isSentByPrimary = 3;
}

// Add Inventory to Item
service UpdateItemInventoryService {
  rpc UpdateItemInventory(UpdateItemInventoryRequest) returns (StatusMessageResponse);
}

message UpdateItemInventoryRequest {
  string id = 1;
  int32 addedQuantity = 2;
  optional bool isSentByPrimary = 3;
}

// View Items
service ViewItemsService {
  rpc ViewItems(ViewItemsRequest) returns (ViewItemsResponse);
}

message ViewItemsRequest {}

message ViewItemsResponse {
  Status status = 1;
  repeated Item items = 2;
}

// Reservation Object
message Reservation {
  string id = 1;
  Item item = 2;
  int32 reservedQuantity = 3;
}

// Reserve Item
service ReserveItemService{
  rpc ReserveItem(ReserveItemRequest) returns (StatusMessageResponse);
}

message ReserveItemRequest {
  string id = 1;
  string itemId = 2;
  int32 reservedQuantity = 3;
  optional bool isSentByPrimary = 4;
}

// View Reservations
service ViewReservationsService {
  rpc ViewReservations(ViewReservationsRequest) returns (ViewReservationsResponse);
}

message ViewReservationsRequest {}

message ViewReservationsResponse {
  Status status = 1;
  repeated Reservation reservations = 2;
}
